@@ -192,6 +192,20 @@ hr {
   --copy-space-secondary: .5em;
 }
 
+.div {
+  color: var(--border-color);
+}
+
+.div::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  min-width: var(--border-width);
+  min-height: var(--border-width);
+  background-color: currentColor;
+}
+
 .al {
   text-align: left;
 }
@@ -3888,20 +3902,6 @@ hr {
 
 .br999 {
   border-radius: 999px;
-}
-
-.div {
-  color: var(--border-color);
-}
-
-.div::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  min-width: var(--border-width);
-  min-height: var(--border-width);
-  background-color: currentColor;
 }
 
 .color-inherit, .color-inherit\:hover:hover, .anchor:hover .color-inherit\:hover {
