@@ -1,0 +1,12 @@
+.div {
+  color: var(--border-color);
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    min-width: var(--border-width);
+    min-height: var(--border-width);
+    background-color: currentColor;
+  }
+}
