@@ -55,16 +55,3 @@
 .br5 { border-radius: var(--br5); }
 .br100 { border-radius: 100%; }
 .br999 { border-radius: 999px; }
-
-.div {
-  color: var(--border-color);
-  &::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 100%;
-    min-width: var(--border-width);
-    min-height: var(--border-width);
-    background-color: currentColor;
-  }
-}
